# rvasm

./: .gitignore  Cargo.toml  LICENSE  README.MD  build.rs
cfg/: help.toml  rv32i.toml
src/: arch.rs  grammar.rs  grammar.rustpeg  main.rs  parser.rs  test.rs
src/emit/: flatbin.rs  mod.rs
test/: imm1.s  imm2.s  rawnop1.s  rawnop2.s  rawnop3.s  rawnop4.s  twonops1.s  twonops2.s
