[package]
name = "rvasm"
version = "0.1.0"
authors = ["Jakub Szewczyk <kubasz51@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "0.6.10"
structopt = "0.2.18"
toml = "0.5.1"
petgraph = "0.4.13"
regex = "1.2.1"

[build-dependencies]
peg = "0.5.7"
