[package]
name = "rvasm"
version = "0.1.0"
authors = ["Jakub Szewczyk <kubasz51@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"
structopt = "0.3.21"
toml = "0.5.8"
petgraph = "0.5.1"
regex = "1.4.3"
peg = "0.6.3"
